CHANGES IN VERSION 2.0.05
-------------------------
USER-LEVEL IMPROVEMENT
    o Fix data.table melt value name in plotVaf. Issue: #311
    o Add more examples for oncoplot customization. Issue: #310
    o Fix colors for NAs in oncoplot legend. Issue: #309
    o CoOncoplot - align gene names. Issue: #308
    o Added keepGeneOrder argument to plotVaf. Issue: #305
    o Added sampleOrder argument to gisticOncoPlot. Issue: #302

CHANGES IN VERSION 2.0.0
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Oncoplot, oncostrip and coOncoplot code has been migrated from ComplexHeatmap to base graphics. Default values for some arguments have been changed.
    o Changed default value for mafObj argument in subsetMaf to TRUE. Issue: #235
    o All ggplots are migrated to base graphics for consistancy
    o TCGA mutations per sample used for tcgaCompare are updated to more stable MC3 cohort from deprecated broad firehose.

IMPROVEMENTS:
    o tcgaCompare now accpets comparing against user specifc cohorts. Issue: #229
    o Add missing genes and samples to oncoplot even when they are not altered. Issue: #254
    o Added MTRNR2L8 protein structure to pfam database. Issue: #255
    o Added addtionalFeature argument to oncoplots. Issue: #270
    o Added log scale option for summary and oncoplots. Issue: #273
    o Made protein domain db compatible with R version < 3.5 Issue: #276
    o Added draw `draw_titv`, and `exprsTbl` argument to oncoplot
    o Additional edits with TMB visualization and additionalFeatures Issue: #289
    o Cooncoplot improvements Issue: #296

BUG FIX
    o Oncoplot annotationOrder bug fix. Issue: #293
    o Update code for AnnovarToMaf. PR #288, #234
    o fixed handling of Status in survival. PR #274
    o Fix swapped confidance intervals in mafCompare function Issue: #269
    o update docs, and vectorized code Issue: #266 #267
    o Improve oncoplot annotations for numeric class Issue: #263 and #203